web_infra/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aws9-portal
  namespace: aws9d
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - www.aws9.pri
      secretName: www-tls
  rules:
  - host: www.aws9.pri
    http:
      paths:
        - path: "/"
          pathType: ImplementationSpecific
          backend:
            service:
              name: aws9-svc-default
              port:
                number: 80
        - path: "/shop(/|$)"
          pathType: ImplementationSpecific
          backend:
            service:
              name: aws9-svc-shop
              port:
                number: 80
        - path: "/blog(/|$)"
          pathType: ImplementationSpecific
          backend:
            service:
              name: aws9-svc-blog
              port:
                number: 80
        - path: "/news(/|$)"
          pathType: ImplementationSpecific
          backend:
            service:
              name: aws9-svc-news
              port:
                number: 80
